Tidy up of lint warnings